r60:
blankaudio now takes an array of channel constants since this better matches how most other functions work
fixed splitchannels crash on certain channel configurations (YomikoR)
better error messages when filters get unsupported input formats or combinations thereof
freezeframes now accepts empty arrays and simply passes through the source clip

r58:
out of range requests getFrame() are now properly rejected instead of possibly crashing later

r57:
fixed nodes never being marked as nfnocache/nfiscache in api3 which caused some older applications to enter an infinite cache insertion loop
fixed memory bloat in python due to circular references when dealing with frame objects
fixed vsrepo missing genstubs files
fixed vfw and avfs speed regression from r55
fixed mismatched format clips not working regression from r55

r56:
more or less a huge pile of bug/regression fixes for r55

r55:
updated visual studio 2019 runtime version
updated zimg to 3.0.3
fixed multiple python bugs related to output, copy on write and memory views (Kamekameha)
fixed expr pow behavior and more clearly documented what values are allowed (sekrit-twc)
fixed premultiplied behavior of maskedmerge (sekrit-twc)

r54:
updated visual studio 2019 runtime version
updated zimg to 3.0.2
cliptoprop now uses the length of the second clip instead of the first one
added sin and cos operator to the expr filter (AkarinVS)
made handling of floating point masks consistent (AkarinVS and more)
fixed memory leak on free in expr filter on linux (AkarinVS)

r53:
updated visual studio 2019 runtime version
updated to python 3.9 for windows
added scale argument to text filters (AkarinVS)
fixed length calculation in y4m header (djatom)
added long path support to vspipe (stax76)
fixed crash in text filter with small resolution clips (jackoneill)
fixed calling wrapped functions through python (IFeelBloated)

r52:
updated visual studio 2019 runtime version
updated zimg
updated vsrepo with support for python wheel packages