@@ -1,4 +1,5 @@
 r60:
+fixed blankclip crashing when fpsnum or fpsden is 0 despite it being allowed
 blankaudio now takes an array of channel constants since this better matches how most other functions work
 fixed splitchannels crash on certain channel configurations (YomikoR)
 better error messages when filters get unsupported input formats or combinations thereof
